tests/baselines/reference/controlFlowDestructuringVariablesInTryCatch.errors.txt
tests/cases/compiler/controlFlowDestructuringVariablesInTryCatch.ts(13,1): error TS2454: Variable 'a' is used before being assigned.
tests/cases/compiler/controlFlowDestructuringVariablesInTryCatch.ts(14,1): error TS2454: Variable 'b' is used before being assigned.
tests/cases/compiler/controlFlowDestructuringVariablesInTryCatch.ts(15,1): error TS2454: Variable 'c' is used before being assigned.


==== tests/cases/compiler/controlFlowDestructuringVariablesInTryCatch.ts (3 errors) ====
    declare function f1(): string;
    declare function f2(): [b: string];
    declare function f3(): { c: string };
    
    try {
        var a = f1();
        var [b] = f2();
        var { c } = f3();
    } catch {
        console.error("error");
    }
    
    a;
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    b;
    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    c;
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    